# jo-langchain

./: .gitignore  main.py  pyproject.toml
.devcontainer/: devcontainer.json
ch03/: main.ipynb
ch04/: prompt_template.ipynb  sequential_chain_01.ipynb  sequential_chain_02.ipynb
ch05/: main.ipynb  main.py
ch06/: app.py
ch07/: main.ipynb  main.py
ch08/: main.py
ch09/: restaurant_rag1.py
ch10/: restaurant_rag2.py
ch11/: restaurant_rag3.ipynb  restaurant_rag3.py
ch12/: rag_advanced_1.ipynb  rag_advanced_2.ipynb
ch13/: rag_advanced_3.ipynb  rag_advanced_4.ipynb  rag_advanced_streamlit.py
ch14/: multi_modal_rag_basic_opensource.ipynb
ch15/: langchain_fashion_multimodal_streamlit.py
ch16/: app_fastapi.py  app.py  client.ipynb  client.py  streamlit_ollama.py  streamlit_openai.py
ch17/: langchain_agent.py
ch18/: langgraph-basic.ipynb
ch19/: langgraph-agenticrag.ipynb
